--- a/GroceryDeliveryClient/tsconfig.app.json
+++ b/GroceryDeliveryClient/tsconfig.app.json
@@ -22,7 +22,14 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
-		"noUncheckedSideEffectImports": true
+		"noUncheckedSideEffectImports": true,
+		/* Aliasing */
+		"baseUrl": ".",
+		"paths": {
+			"@/*": [
+				"./src/*"
+			]
+		}
 	},
 	"include": [
 		"src"
