--- a/GroceryDeliveryAPI/appsettings.json
+++ b/GroceryDeliveryAPI/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=grocerydelivery;User Id=api;Password=apipassword;"
+    "DefaultConnection": "Server=localhost;Database=grocerydelivery;User Id=api;Password=apipassword;TrustServerCertificate=True;Pooling=true;Include Error Detail=true"
   },
+  "DetailedErrors": true,
   "AllowedHosts": "*"
 }
