--- a/.github/workflows/ensure-pr-base-branch-is-dev.yml
+++ b/.github/workflows/ensure-pr-base-branch-is-dev.yml
@@ -2,7 +2,8 @@ name: Auto-change PR base branch
 
 on:
   pull_request:
-    types: [opened, reopened]
+    types: ["opened", "reopened"]
+    branches-ignore: [ "dev" ]
 
 jobs:
   change-base-branch:
@@ -21,7 +22,7 @@ jobs:
             const currentBase = pr.base.ref;
 
             // Customize this logic
-            if (currentBase !== 'dev') {
+            if (currentBase !== 'dev' && headBranch !== 'dev') {
               console.log(`Changing base from ${currentBase} to develop for PR #${pr.number}`);
 
               await github.rest.pulls.update({
