--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,6 +13,10 @@ jobs: # list of things to do
   linting:
     name: Linting # job name (unique id)
     runs-on: ubuntu-latest # on which machine to run
+    permissions:
+        contents: read
+        security-events: write
+        actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps: # list of steps
       - name: Install NodeJS
         uses: actions/setup-node@v2
