--- a/GroceryDeliveryClient/package.json
+++ b/GroceryDeliveryClient/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
